force-app/main/default/objects/Contact/fields/account_eWallet_total_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>account_eWallet_total_USD_Equiv__c</fullName>
    <formula>Account.Total_eWallet_USD_Equiv__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>account eWallet total USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>