force-app/main/default/objects/Contact/fields/Account_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Onboarding_Status__c</fullName>
    <formula>text(Account.onboarding_stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Onboarding Status</label>
    <type>Text</type>
</CustomField>