force-app/main/default/objects/Contact/fields/account_owner__c.field-meta.xml
<CustomField>
    <fullName>account_owner__c</fullName>
    <formula>Account.Owner.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>account owner</label>
    <type>Text</type>
</CustomField>