force-app/main/default/objects/Contact/fields/Account_type__c.field-meta.xml
<CustomField>
    <fullName>Account_type__c</fullName>
    <formula>Account.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account type</label>
    <type>Text</type>
</CustomField>