force-app/main/default/objects/Contact/fields/CMA_CGM_username__c.field-meta.xml
<CustomField>
    <fullName>CMA_CGM_username__c</fullName>
    <description>CMA-CGM username</description>
    <externalId>true</externalId>
    <label>CMA-CGM username</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>