force-app/main/default/objects/Contact/fields/GH__c.field-meta.xml
<CustomField>
    <fullName>GH__c</fullName>
    <formula>contains( Account.current_buyers_funders__c  ,&apos;Grand Ho&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GH</label>
    <type>Checkbox</type>
</CustomField>