force-app/main/default/objects/Contact/fields/Google_username__c.field-meta.xml
<CustomField>
    <fullName>Google_username__c</fullName>
    <externalId>true</externalId>
    <label>Google username</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>