force-app/main/default/objects/Contact/fields/google_username_agent__c.field-meta.xml
<CustomField>
    <fullName>google_username_agent__c</fullName>
    <externalId>true</externalId>
    <label>google username (agent)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>