force-app/main/default/objects/Contact/fields/Incomlend_username__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_username__c</fullName>
    <description>Private email username</description>
    <externalId>true</externalId>
    <label>Incomlend username</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>