force-app/main/default/objects/Contact/fields/Linkedin_username__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_username__c</fullName>
    <externalId>true</externalId>
    <label>Linkedin username</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>