force-app/main/default/objects/Contact/fields/Middle_Names__c.field-meta.xml
<CustomField>
    <fullName>Middle_Names__c</fullName>
    <label>Middle Names</label>
    <length>100</length>
    <type>Text</type>
</CustomField>