force-app/main/default/objects/Contact/fields/Name_TXT__c.field-meta.xml
<CustomField>
    <fullName>Name_TXT__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name TXT</label>
    <type>Text</type>
</CustomField>