force-app/main/default/objects/Contact/fields/National_ID_number__c.field-meta.xml
<CustomField>
    <fullName>National_ID_number__c</fullName>
    <label>National ID number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>