force-app/main/default/objects/Contact/fields/Passport_number__c.field-meta.xml
<CustomField>
    <fullName>Passport_number__c</fullName>
    <label>Passport number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>