force-app/main/default/objects/Contact/fields/preferred_name__c.field-meta.xml
<CustomField>
    <fullName>preferred_name__c</fullName>
    <label>preferred name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>