force-app/main/default/objects/Contact/fields/relationship_to_account__c.field-meta.xml
<CustomField>
    <fullName>relationship_to_account__c</fullName>
    <label>relationship to account</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>employee</fullName>
            </value>
            <value>
                <fullName>director</fullName>
            </value>
            <value>
                <fullName>shareholder (ubo)</fullName>
            </value>
            <value>
                <fullName>consultant</fullName>
            </value>
            <value>
                <fullName>Personal Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>