force-app/main/default/objects/Contact/fields/Skype__c.field-meta.xml
<CustomField>
    <fullName>Skype__c</fullName>
    <label>Skype</label>
    <length>100</length>
    <type>Text</type>
</CustomField>