force-app/main/default/objects/Contact/fields/Subscribed_To_Trade_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_To_Trade_Alerts__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the contact is subscribed to Trade Alert notifications.</description>
    <label>Subscribed To Trade Alerts</label>
    <type>Checkbox</type>
</CustomField>