force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Incomlend_username__c</columns>
    <columns>Google_username__c</columns>
    <columns>Facebook_username__c</columns>
    <columns>Linkedin_username__c</columns>
    <columns>google_username_agent__c</columns>
    <columns>google_username_support__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>