force-app/main/default/objects/Contact/listViews/Contacts_of_purchasers_GH.listView-meta.xml
<ListView>
    <fullName>Contacts_of_purchasers_GH</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>account_eWallet_total_USD_Equiv__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_type__c</field>
        <operation>startsWith</operation>
        <value>Purchaser</value>
    </filters>
    <filters>
        <field>GH__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Contacts of purchasers GH</label>
</ListView>