force-app/main/default/objects/Contact/listViews/Contacts_of_purchasers_no_login_info.listView-meta.xml
<ListView>
    <fullName>Contacts_of_purchasers_no_login_info</fullName>
    <booleanFilter>1 and 2  and 3 and 4 and 5</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>agent__c</columns>
    <columns>account_eWallet_total_USD_Equiv__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>account_owner__c</columns>
    <columns>Google_username__c</columns>
    <columns>Facebook_username__c</columns>
    <columns>Linkedin_username__c</columns>
    <columns>google_username_agent__c</columns>
    <columns>google_username_support__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_type__c</field>
        <operation>startsWith</operation>
        <value>Purchaser</value>
    </filters>
    <filters>
        <field>Account_Onboarding_Status__c</field>
        <operation>equals</operation>
        <value>99.Onboarded</value>
    </filters>
    <filters>
        <field>Facebook_username__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Google_username__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Linkedin_username__c</field>
        <operation>equals</operation>
    </filters>
    <label>Contacts of purchasers - no login info</label>
</ListView>