force-app/main/default/objects/Contact/listViews/Contacts_of_purchasers_not_onboarded.listView-meta.xml
<ListView>
    <fullName>Contacts_of_purchasers_not_onboarded</fullName>
    <booleanFilter>1 and 2 and (3 or 4)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>account_eWallet_total_USD_Equiv__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>account_owner__c</columns>
    <columns>Google_username__c</columns>
    <columns>Facebook_username__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_type__c</field>
        <operation>startsWith</operation>
        <value>Purchaser</value>
    </filters>
    <filters>
        <field>Account_Onboarding_Status__c</field>
        <operation>notEqual</operation>
        <value>Onboarded</value>
    </filters>
    <filters>
        <field>Facebook_username__c</field>
        <operation>greaterThan</operation>
    </filters>
    <filters>
        <field>Google_username__c</field>
        <operation>greaterThan</operation>
    </filters>
    <label>Contacts of purchasers - not onboarded</label>
</ListView>