force-app/main/default/objects/Contact/listViews/Contacts_of_suppliers.listView-meta.xml
<ListView>
    <fullName>Contacts_of_suppliers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Facebook_username__c</columns>
    <columns>Google_username__c</columns>
    <columns>Linkedin_username__c</columns>
    <columns>account_eWallet_total_USD_Equiv__c</columns>
    <columns>Account_Onboarding_Status__c</columns>
    <columns>google_username_support__c</columns>
    <columns>google_username_agent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_type__c</field>
        <operation>startsWith</operation>
        <value>Supplier</value>
    </filters>
    <label>Contacts of suppliers</label>
</ListView>